--- a/index.html
+++ b/index.html
@@ -3,42 +3,17 @@
 	<head>
 		<title>configurator</title>
 		<meta name="viewport" content="width=device-width" />
-		<style>
-			html {
-				width: 100%;
-				height: 100%;
-				display: flex;
-
-				--background-color: #222222;
-				--color: #eeeeaa;
-
-				background: var(--background-color);
-				color: var(--color);
-				font-family: 'Fira Code', Consolas, 'Courier New', Courier, monospace;
-				font-size: 16pt;
-			}
-
-			a, a:link, a:hover, a:visited, a:active {
-				color: var(--color);
-			}
-
-			body {
-				flex: 1;
-				display: flex;
-
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
-			}
-
-			div, a {
-				margin: 0.15em;
-			}
-		</style>
+		<link rel="stylesheet" href="/style.css" />
 	</head>
 	<body>
-		<div>the configurator</div>
-		<a href="mailto:configurator@gmail.com">configurator@gmail.com</a>
-		<a href="tel:+972524326363">+972 52-432-6363</a>
+		<section id="contact">
+			<div>the configurator</div>
+			<a href="mailto:configurator@gmail.com">configurator@gmail.com</a>
+			<a href="tel:+972524326363">+972 52-432-6363</a>
+		</section>
+		<footer>
+			<a href="/">Contact</a>
+			<a href="/talks">Talks</a>
+		</footer>
 	</body>
 </html>
