Use new fronty logo instead of generic front-end

--- a/talks/index.html
+++ b/talks/index.html
@@ -11,7 +11,7 @@
 
 		<ul>
 			<li style="--color: #bbbbee;">
-				<i class="icon"><img class="icon" src="/icons/front.svg" /></i>
+				<i class="icon"><img class="icon" src="/icons/fronty.svg" /></i>
 
 				<div class="title">
 					<span>Micro-frontend at scale</span>
