Add link to radar talk video

--- a/talks/index.html
+++ b/talks/index.html
@@ -19,7 +19,7 @@
 				</div>
 
 				<nav>
-					<coming-soon><a>Video</a></coming-soon>
+					<a href="https://l.gurator.com/radar-video">Video</a>
 					<hr /> <a href="https://l.gurator.com/radar-presentation">Slides</a>
 					<hr /> <a href="https://l.gurator.com/fronty">Code</a>
 					<hr /> <a href="https://l.gurator.com/radar">Conference</a>
