Add Hodash Dev meetup

--- a/talks/index.html
+++ b/talks/index.html
@@ -14,6 +14,19 @@
 				<i class="icon"><img class="icon" src="/icons/fronty.svg" /></i>
 
 				<div class="title">
+					<span>Container Orchestration Zero to Hero</span>
+					<span>September 2019</span>
+				</div>
+
+				<nav>
+					<hr /> <a href="https://l.gurator.com/hodash">Meetup</a>
+				</nav>
+			</li>
+
+			<li style="--color: #bbbbee;">
+				<i class="icon"><img class="icon" src="/icons/fronty.svg" /></i>
+
+				<div class="title">
 					<span>Micro-frontend at scale</span>
 					<span>May 2019</span>
 				</div>
