Update kubernetes icon

--- a/talks/index.html
+++ b/talks/index.html
@@ -10,8 +10,8 @@
 		<header>My talks:</header>
 
 		<ul>
-			<li style="--color: #bbbbee;">
-				<i class="icon"><img class="icon" src="/icons/fronty.svg" /></i>
+			<li style="--color: #528cff;">
+				<i class="icon"><img class="icon" src="/icons/kubernetes.svg" /></i>
 
 				<div class="title">
 					<span>Container Orchestration Zero to Hero</span>
@@ -19,6 +19,7 @@
 				</div>
 
 				<nav>
+					<a href="https://www.youtube.com/watch?v=0IrWz1px4gY">Video</a>
 					<hr /> <a href="https://l.gurator.com/hodash">Meetup</a>
 				</nav>
 			</li>
