Add personal links

--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
 		<link rel="stylesheet" href="/style.css" />
 	</head>
 	<body>
-		<section id="contact">
-			<div>the configurator</div>
-			<a href="mailto:configurator@gmail.com">configurator@gmail.com</a>
-			<a href="tel:+972524326363">+972 52-432-6363</a>
+		<section id="main">
+			<section id="contact">
+				<div>Dor Kleiman</div>
+				<div>the configurator</div>
+			</section>
+			<section id="links">
+				<a href="mailto:configurator@gmail.com">configurator@gmail.com</a>
+				<a href="https://l.gurator.com/github">GitHub</a>
+				<a href="https://l.gurator.com/stackoverflow">StackOverflow</a>
+				<a href="https://l.gurator.com/li">LinkedIn</a>
+				<a href="tel:+972524326363">+972 52-432-6363</a>
+			</section>
 		</section>
 		<footer>
 			<a href="/">Contact</a>
