Add knee deep in git talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -10,6 +10,21 @@
 		<header>My talks:</header>
 
 		<ul>
+			<li style="--color: #eebbbb;">
+				<i class="icon"><img class="icon" src="/icons/git.svg" /></i>
+
+				<div class="title">
+					<span>Knee Deep in Git</span>
+					<span>December 2019</span>
+				</div>
+
+				<nav>
+					<!-- <a href="https://l.gurator.com/knee-deep-in-git-video">Video</a> -->
+					<coming-soon><a>Video</a></coming-soon>
+					<hr /> <a href="https://l.gurator.com/knee-deep-in-git">Meetup</a>
+				</nav>
+			</li>
+
 			<li style="--color: #528cff;">
 				<i class="icon"><img class="icon" src="/icons/kubernetes.svg" /></i>
 
@@ -19,11 +34,11 @@
 				</div>
 
 				<nav>
-					<a href="https://www.youtube.com/watch?v=0IrWz1px4gY">Video</a>
+					<a href="https://l.gurator.com/hodash-video">Video</a>
 					<hr /> <a href="https://l.gurator.com/hodash">Meetup</a>
 				</nav>
 			</li>
-
+			
 			<li style="--color: #bbbbee;">
 				<i class="icon"><img class="icon" src="/icons/fronty.svg" /></i>
 
