--- a/talks/index.html
+++ b/talks/index.html
@@ -1,93 +1,101 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>configurator</title>
-	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" href="/style.css" />
-</head>
-<body>
-	<section id="talks">
-		<header>My talks:</header>
+	<head>
+		<title>configurator</title>
+		<meta name="viewport" content="width=device-width" />
+		<link rel="stylesheet" href="/style.css" />
+	</head>
+	<body>
+		<section id="talks">
+			<header>My talks:</header>
 
-		<ul>
-			<li style="--color: #eebbbb;">
-				<i class="icon"><img class="icon" src="/icons/git.svg" /></i>
+			<ul>
+				<li style="--color: #eebbbb;">
+					<i class="icon"><img class="icon" src="/icons/git.svg"/></i>
 
-				<div class="title">
-					<span>Knee Deep in Git</span>
-					<span>December 2019</span>
-				</div>
+					<div class="title">
+						<span>Knee Deep in Git</span>
+						<span>December 2019</span>
+					</div>
 
-				<nav>
-					<!-- <a href="https://l.gurator.com/knee-deep-in-git-video">Video</a> -->
-					<coming-soon><a>Video</a></coming-soon>
-					<hr /> <a href="https://l.gurator.com/knee-deep-in-git">Meetup</a>
-				</nav>
-			</li>
+					<nav>
+						<!-- <a href="https://l.gurator.com/knee-deep-in-git-video">Video</a> -->
+						<coming-soon><a>Video</a></coming-soon>
+						<hr />
+						<a href="https://l.gurator.com/knee-deep-in-git">Meetup</a>
+					</nav>
+				</li>
 
-			<li style="--color: #528cff;">
-				<i class="icon"><img class="icon" src="/icons/kubernetes.svg" /></i>
+				<li style="--color: #528cff;">
+					<i class="icon"><img class="icon" src="/icons/kubernetes.svg"/></i>
 
-				<div class="title">
-					<span>Container Orchestration Zero to Hero</span>
-					<span>September 2019</span>
-				</div>
+					<div class="title">
+						<span>Container Orchestration Zero to Hero</span>
+						<span>September 2019</span>
+					</div>
 
-				<nav>
-					<a href="https://l.gurator.com/hodash-video">Video</a>
-					<hr /> <a href="https://l.gurator.com/hodash">Meetup</a>
-				</nav>
-			</li>
-			
-			<li style="--color: #bbbbee;">
-				<i class="icon"><img class="icon" src="/icons/fronty.svg" /></i>
+					<nav>
+						<a href="https://l.gurator.com/hodash-video">Video</a>
+						<hr />
+						<a href="https://l.gurator.com/hodash">Meetup</a>
+					</nav>
+				</li>
 
-				<div class="title">
-					<span>Micro-frontend at scale</span>
-					<span>May 2019</span>
-				</div>
+				<li style="--color: #bbbbee;">
+					<i class="icon"><img class="icon" src="/icons/fronty.svg"/></i>
 
-				<nav>
-					<a href="https://l.gurator.com/radar-video">Video</a>
-					<hr /> <a href="https://l.gurator.com/radar-presentation">Slides</a>
-					<hr /> <a href="https://l.gurator.com/fronty">Code</a>
-					<hr /> <a href="https://l.gurator.com/radar">Conference</a>
-				</nav>
-			</li>
+					<div class="title">
+						<span>Micro-frontend at scale</span>
+						<span>May 2019</span>
+					</div>
 
-			<li style="--color: #bbeebb;">
-				<i class="icon"><img class="icon" src="/icons/webpack.svg" /></i>
+					<nav>
+						<a href="https://l.gurator.com/radar-video">Video</a>
+						<hr />
+						<a href="https://l.gurator.com/radar-presentation">Slides</a>
+						<hr />
+						<a href="https://l.gurator.com/fronty">Code</a>
+						<hr />
+						<a href="https://l.gurator.com/radar">Conference</a>
+					</nav>
+				</li>
 
-				<div class="title">
-					<span>Build your own Webpack</span>
-					<span>January 2019</span>
-				</div>
+				<li style="--color: #bbeebb;">
+					<i class="icon"><img class="icon" src="/icons/webpack.svg"/></i>
 
-				<nav>
-					<a href="https://l.gurator.com/diy-video">Video</a>
-					<hr /> <a href="https://l.gurator.com/diy-slides">Slides</a>
-					<hr /> <a href="https://l.gurator.com/diy-repo">Code</a>
-					<hr /> <a href="https://l.gurator.com/diy">Meetup</a>
-				</nav>
-			</li>
+					<div class="title">
+						<span>Build your own Webpack</span>
+						<span>January 2019</span>
+					</div>
 
-			<li style="--color: #eebbbb;">
-				<i class="icon"><img class="icon" src="/icons/git.svg" /></i>
+					<nav>
+						<a href="https://l.gurator.com/diy-video">Video</a>
+						<hr />
+						<a href="https://l.gurator.com/diy-slides">Slides</a>
+						<hr />
+						<a href="https://l.gurator.com/diy-repo">Code</a>
+						<hr />
+						<a href="https://l.gurator.com/diy">Meetup</a>
+					</nav>
+				</li>
 
-				<div class="title">
-					<span>git happens</span>
-					<span>April 2018</span>
-				</div>
+				<li style="--color: #eebbbb;">
+					<i class="icon"><img class="icon" src="/icons/git.svg"/></i>
 
-				<nav>
-					<a href="https://l.gurator.com/git-happens-video">Video</a>
-				</nav>
-			</li>
-		</ul>
-	</section>
-	<footer>
-		<a href="/">Contact</a>
-		<a href="/talks">Talks</a>
-	</footer>
-</body>
+					<div class="title">
+						<span>git happens</span>
+						<span>April 2018</span>
+					</div>
+
+					<nav>
+						<a href="https://l.gurator.com/git-happens-video">Video</a>
+					</nav>
+				</li>
+			</ul>
+		</section>
+		<footer>
+			<a href="/">Contact</a>
+			<a href="/talks">Talks</a>
+		</footer>
+	</body>
 </html>
