Add knee deep video link

--- a/talks/index.html
+++ b/talks/index.html
@@ -19,8 +19,7 @@
 					</div>
 
 					<nav>
-						<!-- <a href="https://l.gurator.com/knee-deep-in-git-video">Video</a> -->
-						<coming-soon><a>Video</a></coming-soon>
+						<a href="http://l.gurator.com/knee-deep-video">Video</a>
 						<hr />
 						<a href="https://l.gurator.com/knee-deep-in-git">Meetup</a>
 					</nav>
